--- a/index.html
+++ b/index.html
@@ -1,19 +1,163 @@
-<!--[if IE]><meta http-equiv="X-UA-Compatible" content="IE=5,IE=9" ><![endif]-->
 <!DOCTYPE html>
 <html>
 <head>
-<title>iOS Roadmap</title>
-<meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
-  <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.4/dist/jquery.slim.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
+<link rel="stylesheet" href="CSS.css">
 </head>
 <body>
-    <div class="bg-image"
-     style="background-color: #000000;">
-     <img src="iOSRoapMap.png" class="img-fluid" alt="Chania"></img>
-    </div>
+
+    <h1>iOS Roadmap</h1>
+    <nav class="nav">
+                <ul>
+                    <li>
+                        <a href="#">Start</a>
+                        <ul>
+                            <li>
+                                <h4 href="#">Brief</h4>
+                                <ul>
+                                    <li>
+                                        <a href="#">What is iOS</a>
+                                        <ul>
+                                            <li>
+                                                <a href="#">History of iOS</a>
+                                                <h4 href="#">OOPS</h4>
+                                                <ul>
+                                                    <li>
+                                                        <a href="#">Composition</a>
+                                                        <ul>
+                                                            <a href="#">Protocol</a>
+                                                            <ul>
+                                                                <a href="#">Extensions</a>
+                                                                <ul>
+                                                                    <h4 href="#">Swift</h4>
+                                                                    <ul>
+                                                                        <li><ul>
+                                                                            <li>
+                                                                                <a href="#">Classes</a>
+                                                                                <ul>
+                                                                                    <a href="#">Structures</a>
+                                                                                    <ul>
+                                                                                        <a href="#">Enums</a>
+                                                                                        <ul>
+                                                                                            <a href="#">Control Flow</a>
+                                                                                            <ul>
+                                                                                                <a href="#">Control Transfer</a>
+                                                                                                <ul>
+                                                                                                    <a href="#">Error Handling</a>
+                                                                                                    <ul>
+                                                                                                        <a href="#">Collection Types</a>
+                                                                                                        <ul>
+                                                                                                            <a href="#">Optionals</a>
+                                                                                                            <ul>
+                                                                                                                <a href="#">Properties</a>
+                                                                                                                
+                                                                                                            </ul>
+                                                                                                        </ul>
+                                                                                                    </ul>
+                                                                                            </ul>
+                                                                                        </ul>
+                                                                                    </ul>
+                                                                                </ul>
+                                                                            </li>
+                                                                        </ul></li>
+                                                                        <li>
+                                                                            <ul>
+                                                                                <li>
+                                                                                        <ul>
+                                                                                            <a href="#">Strings</a>
+                                                                                            <ul>
+                                                                                                <a href="#">ARC</a>
+                                                                                                <ul>
+                                                                                                    <a href="#">Closures</a>
+                                                                                                    <ul>
+                                                                                                        <a href="#">Initialisation</a>
+                                                                                                        <ul>
+                                                                                                            <a href="#">Access modifiers</a>
+                                                                                                            <ul>
+                                                                                                                <a href="#">Higher Order Func.</a>
+                                                                                                                <ul>
+                                                                                                                    <a href="#">Generics</a>
+                                                                                                                    <ul>
+                                                                                                                        <a href="#">Type Casting</a>
+                                                                                                                    </ul>
+                                                                                                                </ul>
+                                                                                                            </ul>
+                                                                                                        </ul>
+                                                                                                    </ul>
+                                                                                                </ul>
+                                                                                            </ul>
+                                                                                        </ul>
+                                                                                    </ul>
+                                                                                </li>
+                                                                            </ul>
+                                                                        </li>
+                                                                    </ul>
+                                                                </ul>
+                                                            </ul>
+                                                        </ul>
+                                                    </li>
+                                                </ul>
+                                            </li>
+                                        </ul>
+                                    </li>
+                                </ul>
+                            </li>
+                            <li>
+                                <h4 href="#">Dev Tools</h4>
+                                <ul>
+                                    <li>
+                                        <a href="#">Xcode</a>
+                                        <ul>
+                                            <a href="#">Code Signing</a>
+                                            <ul>
+                                                <a href="#">Instruments</a>
+                                                <ul>
+                                                    <a href="#">Organizer</a>
+                                                    <ul>
+                                                        <li>
+                                                            <h4 href="#">Dev Tools</h4>
+                                                            <ul>
+                                                                <li>
+                                                                    <a href="#">Xcode</a>
+                                                                    <ul>
+                                                                        <a href="#">Code Signing</a>
+                                                                        <ul>
+                                                                            <a href="#">Instruments</a>
+                                                                            <ul>
+                                                                                <a href="#">Organizer</a>
+                                                                            </ul>
+                                                                        </ul>
+                                                                    </ul>
+                                                                </li>
+                                                            </ul>
+                                                        </li>
+                                                        <li>
+                                                            <h4 href="#">Dev Tools</h4>
+                                                            <ul>
+                                                                <li>
+                                                                    <a href="#">Xcode</a>
+                                                                    <ul>
+                                                                        <a href="#">Code Signing</a>
+                                                                        <ul>
+                                                                            <a href="#">Instruments</a>
+                                                                            <ul>
+                                                                                <a href="#">Organizer</a>
+                                                                            </ul>
+                                                                        </ul>
+                                                                    </ul>
+                                                                </li>
+                                                            </ul>
+                                                        </li>
+                                                    </ul>
+                                                </ul>
+                                            </ul>
+                                        </ul>
+                                    </li>
+                                </ul>
+                            </li>
+                        </ul>
+                    </li>
+                </ul>
+            </nav>
+
 </body>
 </html>
